--- a/java/res/values-hi/strings.xml
+++ b/java/res/values-hi/strings.xml
@@ -157,28 +157,16 @@
     <string name="read_external_dictionary_confirm_install_message" msgid="6898610163768980870">"<xliff:g id="LOCALE_NAME">%s</xliff:g> के लिए वास्तव में यह फ़ाइल इंस्टॉल करें?"</string>
     <string name="error" msgid="8940763624668513648">"कोई त्रुटि हुई थी"</string>
     <string name="button_default" msgid="3988017840431881491">"डिफ़ॉल्ट"</string>
-    <!-- no translation found for setup_title (747642322299536064) -->
-    <skip />
-    <!-- no translation found for setup_step1_bullet (1963433060317624853) -->
-    <skip />
-    <!-- no translation found for setup_step1_title (7316009176808245440) -->
-    <skip />
-    <!-- no translation found for setup_step1_instruction (600886471143563141) -->
-    <skip />
-    <!-- no translation found for setup_step2_bullet (1827848024009574912) -->
-    <skip />
-    <!-- no translation found for setup_step2_title (7272709575177957189) -->
-    <skip />
-    <!-- no translation found for setup_step2_instruction (954968636921544464) -->
-    <skip />
-    <!-- no translation found for setup_step3_bullet (1599279767555395777) -->
-    <skip />
-    <!-- no translation found for setup_step3_title (3154757183631490281) -->
-    <skip />
-    <!-- no translation found for setup_step3_instruction (3095456922436793809) -->
-    <skip />
-    <!-- no translation found for language_settings (1671153053201809031) -->
-    <skip />
-    <!-- no translation found for select_input_method (4301602374609275003) -->
-    <skip />
+    <string name="setup_title" msgid="747642322299536064">"<xliff:g id="APPLICATION_NAME">%s</xliff:g> इंस्टॉल करना"</string>
+    <string name="setup_step1_bullet" msgid="1963433060317624853">"1"</string>
+    <string name="setup_step1_title" msgid="7316009176808245440">"सेटिंग में <xliff:g id="APPLICATION_NAME">%s</xliff:g> को सक्षम करें."</string>
+    <string name="setup_step1_instruction" msgid="600886471143563141">"सुरक्षा के लिए, कृपया \"<xliff:g id="APPLICATION_NAME">%s</xliff:g>\" को चेक करें"</string>
+    <string name="setup_step2_bullet" msgid="1827848024009574912">"2"</string>
+    <string name="setup_step2_title" msgid="7272709575177957189">"<xliff:g id="APPLICATION_NAME">%s</xliff:g> पर स्विच करें."</string>
+    <string name="setup_step2_instruction" msgid="954968636921544464">"अब जबकि आपने <xliff:g id="APPLICATION_NAME">%s</xliff:g> को सक्षम कर दिया है, आप उस पर स्विच कर सकते हैं."</string>
+    <string name="setup_step3_bullet" msgid="1599279767555395777">"3"</string>
+    <string name="setup_step3_title" msgid="3154757183631490281">"बधाई हो, आप बिल्कुल तैयार हैं!"</string>
+    <string name="setup_step3_instruction" msgid="3095456922436793809">"अतिरिक्त भाषाएं कॉन्फ़िगर करना"</string>
+    <string name="language_settings" msgid="1671153053201809031">"भाषा और इनपुट"</string>
+    <string name="select_input_method" msgid="4301602374609275003">"इनपुट पद्धति चुनें"</string>
 </resources>
