--- a/java/res/values-de/strings.xml
+++ b/java/res/values-de/strings.xml
@@ -157,28 +157,16 @@
     <string name="read_external_dictionary_confirm_install_message" msgid="6898610163768980870">"Möchten Sie diese Datei für <xliff:g id="LOCALE_NAME">%s</xliff:g> installieren?"</string>
     <string name="error" msgid="8940763624668513648">"Es ist ein Fehler aufgetreten"</string>
     <string name="button_default" msgid="3988017840431881491">"Standard"</string>
-    <!-- no translation found for setup_title (747642322299536064) -->
-    <skip />
-    <!-- no translation found for setup_step1_bullet (1963433060317624853) -->
-    <skip />
-    <!-- no translation found for setup_step1_title (7316009176808245440) -->
-    <skip />
-    <!-- no translation found for setup_step1_instruction (600886471143563141) -->
-    <skip />
-    <!-- no translation found for setup_step2_bullet (1827848024009574912) -->
-    <skip />
-    <!-- no translation found for setup_step2_title (7272709575177957189) -->
-    <skip />
-    <!-- no translation found for setup_step2_instruction (954968636921544464) -->
-    <skip />
-    <!-- no translation found for setup_step3_bullet (1599279767555395777) -->
-    <skip />
-    <!-- no translation found for setup_step3_title (3154757183631490281) -->
-    <skip />
-    <!-- no translation found for setup_step3_instruction (3095456922436793809) -->
-    <skip />
-    <!-- no translation found for language_settings (1671153053201809031) -->
-    <skip />
-    <!-- no translation found for select_input_method (4301602374609275003) -->
-    <skip />
+    <string name="setup_title" msgid="747642322299536064">"<xliff:g id="APPLICATION_NAME">%s</xliff:g> wird installiert..."</string>
+    <string name="setup_step1_bullet" msgid="1963433060317624853">"1."</string>
+    <string name="setup_step1_title" msgid="7316009176808245440">"<xliff:g id="APPLICATION_NAME">%s</xliff:g> in den Einstellungen aktivieren"</string>
+    <string name="setup_step1_instruction" msgid="600886471143563141">"Überprüfen Sie \"<xliff:g id="APPLICATION_NAME">%s</xliff:g>\" aus Sicherheitsgründen."</string>
+    <string name="setup_step2_bullet" msgid="1827848024009574912">"2."</string>
+    <string name="setup_step2_title" msgid="7272709575177957189">"Zu <xliff:g id="APPLICATION_NAME">%s</xliff:g> wechseln"</string>
+    <string name="setup_step2_instruction" msgid="954968636921544464">"Nachdem Sie <xliff:g id="APPLICATION_NAME">%s</xliff:g> aktiviert haben, können Sie jetzt wechseln."</string>
+    <string name="setup_step3_bullet" msgid="1599279767555395777">"3."</string>
+    <string name="setup_step3_title" msgid="3154757183631490281">"Die Einrichtung ist abgeschlossen"</string>
+    <string name="setup_step3_instruction" msgid="3095456922436793809">"Konfigurieren Sie weitere Sprachen."</string>
+    <string name="language_settings" msgid="1671153053201809031">"Sprache &amp; Eingabe"</string>
+    <string name="select_input_method" msgid="4301602374609275003">"Eingabemethode wählen"</string>
 </resources>
