--- a/java/res/values-es/strings.xml
+++ b/java/res/values-es/strings.xml
@@ -157,16 +157,16 @@
     <string name="read_external_dictionary_confirm_install_message" msgid="6898610163768980870">"¿Seguro que quieres instalar este archivo para <xliff:g id="LOCALE_NAME">%s</xliff:g>?"</string>
     <string name="error" msgid="8940763624668513648">"Se ha producido un error"</string>
     <string name="button_default" msgid="3988017840431881491">"Predeterminado"</string>
-    <string name="setup_title" msgid="747642322299536064">"Instalando <xliff:g id="APPLICATION_NAME">%s</xliff:g>..."</string>
+    <string name="setup_title" msgid="747642322299536064">"Cómo instalar <xliff:g id="APPLICATION_NAME">%s</xliff:g>"</string>
     <string name="setup_step1_bullet" msgid="1963433060317624853">"1"</string>
-    <string name="setup_step1_title" msgid="7316009176808245440">"Habilitar <xliff:g id="APPLICATION_NAME">%s</xliff:g> en ajustes"</string>
+    <string name="setup_step1_title" msgid="7316009176808245440">"Habilita <xliff:g id="APPLICATION_NAME">%s</xliff:g> en los ajustes"</string>
     <string name="setup_step1_instruction" msgid="600886471143563141">"Por seguridad, comprueba \"<xliff:g id="APPLICATION_NAME">%s</xliff:g>\"."</string>
     <string name="setup_step2_bullet" msgid="1827848024009574912">"2"</string>
-    <string name="setup_step2_title" msgid="7272709575177957189">"Cambiar a <xliff:g id="APPLICATION_NAME">%s</xliff:g>"</string>
+    <string name="setup_step2_title" msgid="7272709575177957189">"Cambia a <xliff:g id="APPLICATION_NAME">%s</xliff:g>"</string>
     <string name="setup_step2_instruction" msgid="954968636921544464">"Ahora que has habilitado <xliff:g id="APPLICATION_NAME">%s</xliff:g>, puedes utilizar la aplicación."</string>
     <string name="setup_step3_bullet" msgid="1599279767555395777">"3"</string>
     <string name="setup_step3_title" msgid="3154757183631490281">"¡Enhorabuena, has terminado!"</string>
-    <string name="setup_step3_instruction" msgid="3095456922436793809">"Configurar otros idiomas"</string>
+    <string name="setup_step3_instruction" msgid="3095456922436793809">"Configura otros idiomas"</string>
     <string name="language_settings" msgid="1671153053201809031">"Idioma y entrada de texto"</string>
     <string name="select_input_method" msgid="4301602374609275003">"Selecciona un método de entrada"</string>
 </resources>
